[project]
name = "z4j-core"
version = "1.0.6"
description = "z4j domain core - models, protocols, transport, redaction, policy (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "task", "queue", "control-plane"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

# z4j-core is the PURE DOMAIN core. It imports nothing framework- or
# engine-specific. The only allowed runtime dependency is Pydantic
# (for validated data models) plus the Python standard library.
# This is enforced by .importlinter in the repo root.
dependencies = [
    # ``[email]`` extra pulls in email-validator, required by the
    # ``EmailStr`` field on ``z4j_core.models.user.User``. Without
    # this every consumer of z4j-core that imports the user model
    # crashes at import time.
    "pydantic[email]>=2.13.3",
    "typing-extensions>=4.15.0",
]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-core/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-core/issues"
Source = "https://github.com/z4jdev/z4j-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_core"]
